--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       </div>
       <div class="line"></div>
       <p id="made-with-love">
-        Made with ❤️ by Kalvian.
+        Made with ❤️ by LEE.
       </p>
     </section>
     <script type="text/javascript" src="./script.js"></script>
